feat: open TCP socket and listen for messages (#23)

--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -1,6 +1,6 @@
 instrumentation:
   include-all-sources: true
-  excludes: []
+  excludes: ['**/examples/**']
 check:
   global:
     statements: 90
