--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "test:coverage-check": "npm run test:coverage && istanbul check-coverage"
   },
   "dependencies": {
-    "@leveloneproject/central-services-shared": "^0.3.0",
+    "@leveloneproject/central-services-shared": "0.3.0",
     "bluebird": "3.5.0",
-    "rc": "^1.2.1",
-    "uuid4": "^1.0.0",
+    "rc": "1.2.1",
+    "uuid4": "1.0.0",
     "ws": "3.0.0"
   },
   "devDependencies": {
     "faucet": "0.0.1",
     "istanbul": "0.4.5",
     "pre-commit": "1.2.2",
-    "proxyquire": "^1.8.0",
+    "proxyquire": "1.8.0",
     "sinon": "2.3.4",
     "standard": "10.0.2",
     "tap-xunit": "1.7.0",
