--- a/package.json
+++ b/package.json
@@ -19,14 +19,22 @@
     "test:unit": "tape 'test/unit/**/*.test.js'",
     "test:xunit": "npm run test:unit | tap-xunit",
     "test:coverage": "istanbul cover tape -- 'test/unit/**/*.test.js'",
-    "test:coverage-check": "npm run test:coverage && istanbul check-coverage"
+    "test:coverage-check": "npm run test:coverage && istanbul check-coverage",
+    "migrate:create": "knex migrate:make $npm_package_config_knex",
+    "migrate:rollback": "knex migrate:rollback $npm_package_config_knex",
+    "migrate:current": "knex migrate:currentVersion $npm_package_config_knex"
   },
   "dependencies": {
+    "@leveloneproject/central-services-database": "0.2.1",
     "@leveloneproject/central-services-shared": "0.3.0",
+    "bitsyntax": "0.0.4",
     "bluebird": "3.5.0",
     "rc": "1.2.1",
     "uuid4": "1.0.0",
     "ws": "3.0.0"
+  },
+  "optionalDependencies": {
+    "pg": "6.1.5"
   },
   "devDependencies": {
     "faucet": "0.0.1",
