--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,17 @@
 machine:
+  pre:
+    - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
+  services:
+    - docker
   node:
     version: 6.5.0
+  environment:
+    INTG_TEST_CMD: tape 'test/integration/**/*.test.js' | tap-xunit > ./test/results/tape-integration.xml
+
+dependencies:
+  pre:
+    - sudo rm -f /usr/local/bin/docker-compose
+    - sudo pip install docker-compose==1.8.1
 
 test:
   pre:
@@ -8,6 +19,7 @@ test:
   override:
     - set -o pipefail && npm -s run test:xunit > ./test/results/tape.xml
     - npm -s run test:coverage-check
+    - npm -s run test:integration
   post:
     - cp ./test/results/* $CIRCLE_TEST_REPORTS
     - mv ./coverage $CIRCLE_ARTIFACTS
