--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "moment": "2.18.1",
     "node-aes-cmac": "0.1.1",
     "rc": "1.2.1",
+    "tweetnacl": "1.0.0",
+    "tweetnacl-util": "0.15.0",
     "uuid4": "1.0.0",
     "ws": "3.0.0"
   },
