--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pg": "6.1.5"
   },
   "devDependencies": {
+    "aws-sdk": "2.16.0",
     "faucet": "0.0.1",
     "istanbul": "0.4.5",
     "pre-commit": "1.2.2",
