--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forensic-logging-sidecar",
+  "name": "@leveloneproject/forensic-logging-sidecar",
   "version": "0.12.0",
   "description": "Sidecar service to save forensic logs",
   "license": "SEE LICENSE IN LICENSE",
