--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@leveloneproject/forensic-logging-sidecar",
   "version": "0.12.0",
   "description": "Sidecar service to save forensic logs",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "CC-BY-SA-4.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LevelOneProject/forensic-logging-sidecar.git"
